--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@
   --white: #ffffff;
   --cloud: #f4f4fd;
   --button-iris: #4d5ae5;
+  --customer-border: #8e8f99;
 }
 
 h1,
@@ -125,6 +126,7 @@ body {
   color: var(--secondary-text-color);
 }
 .web-logo {
+  display: ;
   font-family: var(--secondary-font);
   font-weight: 800;
   font-size: 18px;
@@ -163,6 +165,7 @@ body {
 .hero {
   padding-top: 188px;
   padding-bottom: 188px;
+  background-color: var(--background-color-navy);
 }
 .hero-title {
   max-width: 496px;
@@ -340,6 +343,34 @@ body {
   letter-spacing: 0.02em;
   color: var(--secondary-text-color);
 }
+/* ======================================Customers============================== */
+
+.custumer-list-logo {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+
+.customer-icon-link {
+  display: flex;
+  height: 88px;
+  border-radius: 4px;
+  border: 1px solid var(--customer-border);
+  justify-content: center;
+  align-items: center;
+}
+.customer-link {
+  color: currentColor;
+}
+
+.customer-icon-link :is(:hover, :focus) > .customer-link {
+  background-color: var(--accent-color);
+}
+
+.customer-logo {
+  width: calc((100% - 120px) / 6);
+}
+
 /* ======================================footer========================================== */
 
 .page-footer {
