--- a/css/styles.css
+++ b/css/styles.css
@@ -347,28 +347,35 @@ body {
 
 .custumer-list-logo {
   display: flex;
+  align-items: center;
   justify-content: center;
   gap: 24px;
 }
 
-.customer-icon-link {
-  display: flex;
+.customer-logo {
   height: 88px;
-  border-radius: 4px;
-  border: 1px solid var(--customer-border);
+  width: 168px;
+}
+.customer-icon-link {
+  width: 100%;
+  height: 100%;
+  display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 4px;
+  border: 1px solid var(--customer-border);
+}
+.customer-icon-link :hover,
+.customer-icon-link :focus {
+  border-color: var(--accent-color);
 }
 .customer-link {
-  color: currentColor;
+  fill: var(--customer-border);
 }
 
-.customer-icon-link :is(:hover, :focus) > .customer-link {
-  background-color: var(--accent-color);
-}
-
-.customer-logo {
-  width: calc((100% - 120px) / 6);
+.customer-icon-link :hover.customer-link,
+.customer-icon-link :focus.customer-link {
+  fill: var(--accent-color);
 }
 
 /* ======================================footer========================================== */
