--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@
   --cloud: #f4f4fd;
   --button-iris: #4d5ae5;
   --customer-border: #8e8f99;
-  --hover-green:#31D0AA;
+  --hover-green: #31d0aa;
 }
 
 h1,
@@ -76,6 +76,7 @@ body {
 }
 
 /* ======================================Header========================================== */
+
 .page-header {
   padding-top: 24px;
   padding-bottom: 24px;
@@ -90,15 +91,14 @@ body {
   display: flex;
   align-items: center;
 }
-.studio-logo-dark {
-  margin-right: 76px;
-}
+
 .menu-item:not(:last-child) {
   margin-right: 40px;
 }
 .menu {
   display: flex;
   align-items: center;
+  margin-left: 76px;
 }
 .contact {
   display: flex;
@@ -207,9 +207,9 @@ body {
   background: var(--web-logo);
   border: none;
   border-radius: 4px;
-
+}
+.type-button {
   margin: auto;
-
   display: block;
   padding: 16px 32px;
   background: #4d5ae5;
@@ -219,6 +219,7 @@ body {
 .type-button:focus {
   background-color: var(--accent-color);
   color: var(--white);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 /* ======================================Task and goals========================================== */
@@ -269,8 +270,7 @@ body {
 .name-title {
   margin-bottom: 8px;
 }
-.container > .descr-title-light {
-  
+.container .descr-title-light {
   margin-top: 16px;
   width: 264px;
 }
@@ -302,9 +302,6 @@ body {
 }
 .team-list {
   background-color: var(--background-color-white);
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-  border-radius: 0px 0px 4px 4px;
 }
 .team-list {
   flex-basis: calc(100% - 72px) / 4;
@@ -335,7 +332,10 @@ body {
 }
 
 .employees-card {
+  border-radius: 0px 0px 4px 4px;
   padding: 32px 16px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .name-title {
   font-weight: 500;
@@ -366,44 +366,45 @@ body {
   border-radius: 4px;
   border: 1px solid var(--customer-border);
 }
-.customer-icon-link :hover,
-.customer-icon-link :focus {
+.customer-icon-link:hover,
+.customer-icon-link:focus {
   border-color: var(--accent-color);
 }
 .customer-link {
   fill: var(--customer-border);
 }
 
-.customer-icon-link :hover.customer-link,
-.customer-icon-link :focus.customer-link {
+.customer-icon-link:hover .customer-link,
+.customer-icon-link:focus .customer-link {
   fill: var(--accent-color);
 }
 
 /* ======================================footer========================================== */
-
 .page-footer {
   background-color: var(--background-color-navy);
   padding-top: 100px;
   padding-bottom: 100px;
 }
+.box-footer {
+  display: flex;
+  align-items: flex-start;
+}
+
 .studio-logo-light {
   color: var(--cloud);
 }
+
+.box-one {
+  margin-right: 120px;
+}
 /* =========================================Social media============================= */
 
-.sub-footer {
-  margin: 0 auto;
-}
-
 .foot-subtext {
-  font-family: "Roboto";
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--white);
-  display: flex;
-  justify-content: center;
   margin-bottom: 16px;
 }
 
@@ -456,7 +457,10 @@ body {
 .portfolio-button:not(:last-child) {
   margin-right: 24px;
 }
-
+.portfolio-link :is(:hover, :focus) {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
 .buttons {
   display: flex;
   flex-wrap: wrap;
@@ -468,6 +472,8 @@ body {
 .nav-button:focus {
   background-color: var(--accent-color);
   color: var(--white);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio-list {
