--- a/css/styles.css
+++ b/css/styles.css
@@ -325,7 +325,7 @@ body {
   background-color: var(--button-iris);
 }
 .link-icon {
-  fill: var(--background-color-cloud);
+  fill: currentColor;
 }
 .team-icon-link:hover {
   background-color: var(--accent-color);
@@ -427,8 +427,8 @@ body {
   border-radius: 50%;
   background-color: var(--button-iris);
 }
-.link-icon {
-  fill: var(--background-color-cloud);
+.foot-icon-link{
+  fill: currentColor;
 }
 .social-icon-link:hover {
   background-color: var(--hover-green);
