--- a/css/styles.css
+++ b/css/styles.css
@@ -182,7 +182,6 @@ body {
 }
 .overlay {
   max-width: 1440px;
-  height: 600px;
   margin-right: auto;
   margin-left: auto;
   background-image: linear-gradient(
@@ -427,7 +426,7 @@ body {
   border-radius: 50%;
   background-color: var(--button-iris);
 }
-.foot-icon-link{
+.foot-icon-link {
   fill: currentColor;
 }
 .social-icon-link:hover {
@@ -441,7 +440,6 @@ body {
 }
 
 .nav-button {
-  min-width: 116px;
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
@@ -457,9 +455,10 @@ body {
 .portfolio-button:not(:last-child) {
   margin-right: 24px;
 }
-.portfolio-link :is(:hover, :focus) {
+.portfolio-link:is(:hover, :focus) {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  display: block;
 }
 .buttons {
   display: flex;
@@ -472,6 +471,7 @@ body {
 .nav-button:focus {
   background-color: var(--accent-color);
   color: var(--white);
+
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
@@ -491,7 +491,5 @@ body {
 .card {
   border: solid 1px #e7e9fc;
   border-top: none;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  padding-left: 16px;
+  padding: 32px 16px;
 }
